--- a/02 DOM Манипуляция элементами и события/first-project-START/index.css
+++ b/02 DOM Манипуляция элементами и события/first-project-START/index.css
@@ -71,17 +71,17 @@
 }
 
 .tasks {
+  display: grid;
+  grid-template-columns: 1fr;
+  row-gap: 20px;
   max-width: 690px;
   margin: 0 auto;
   padding: 0;
   list-style: none;
 }
 
-.tasks__task {}
-
 .task {
-  display: grid;
-  grid-template-columns: 1fr;
+  display: block;
   padding: 20px;
   border: 1px solid rgba(0, 0, 0, .125);
   border-radius: .25rem;
@@ -89,7 +89,7 @@
 
 .task__title {
   font-size: 1rem;
-  font-weight: 400;
+  font-weight: 700;
   line-height: 1.5;
   color: #212529;
   text-align: left;
@@ -102,8 +102,9 @@
 }
 
 .task__button {
-  justify-self: end;
+  display: block;
   margin-top: 1.5rem;
+  margin-left: auto;
   padding: 0.375rem 0.75rem;
   font-weight: 400;
   font-size: 1rem;
